--- a/vu-linh/mau04.css
+++ b/vu-linh/mau04.css
@@ -685,3 +685,16 @@ background-color: #cccccb;
 
 }
 
+
+
+@media (max-width: 480px){
+    .container {
+        width: 100%;
+    }
+    .container-wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
