--- a/vu-linh/mau04.css
+++ b/vu-linh/mau04.css
@@ -481,7 +481,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     padding: 40px 40px 0 40px;
     z-index: 1;
 }
@@ -493,20 +493,26 @@ input::placeholder{
 .img-form{
     width: 100%;
 }
+
+.box-thamdu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
 .lb-form{
     font-size: 25px;
-    margin: 20px 0;
+    /* margin: 20px 0; */
 }
-
-
 .feed-info{
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    margin: 20px 0;
+    width: 100%;
+    text-align: center;
+    /* margin: 20px 0 0 50px; */
 }
 
 .in-fe{
+
     font-size: 11px;
     font-weight: 300;
 }
